# MantraEngine

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
MantraEngine/: CMakeLists.txt  ME_PCH.h  MantraEngine.h
MantraEngine/libs/glad/include/glad/: glad.h
MantraEngine/libs/glad/src/: glad.c
MantraEngine/src/: Application.cpp  Application.h  Core.h  EntryPoint.h  ME_PCH.h  MantraEngine.h
MantraEngine/src/Events/: ApplicationEvent.h  MouseEvent.h
MantraEngine/src/Mantra/: Application.cpp  Application.h  Core.h  EntryPoint.h
MantraEngine/src/Mantra/Events/: Event.h  KeyEvent.h
MantraEngine/src/Mantra/Input/: GLFWInput.cpp  GLFWInput.h  Input.h
MantraEngine/src/Mantra/Layers/: ImGuiLayer.cpp  ImGuiLayer.h  Layer.h  Layerstack.cpp  Layerstack.h
MantraEngine/src/Mantra/Log/: Log.cpp  Log.h
MantraEngine/src/Mantra/Window/: GLFWWindow.cpp  GLFWWindow.h  Window.h  WindowsWindow.cpp  WindowsWindow.h
SandboxApp/: CMakeLists.txt
SandboxApp/src/: SandboxApp.cpp
